--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage",
+        "test:run": "vitest run"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@vitejs/plugin-vue": "^5.2.4",
+        "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.10.0",
         "concurrently": "^9.0.1",
+        "jsdom": "^24.1.3",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^6.2.4",
+        "vitest": "^1.6.1",
         "vue": "^3.4.0"
     },
     "dependencies": {
@@ -25,7 +32,6 @@
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
-        "@vitejs/plugin-vue": "^6.0.0",
         "pinia": "^3.0.3",
         "vue": "^3.5.17",
         "vue-loader": "^17.3.1",
