--- a/.github/workflows/teampulse-ci.yml
+++ b/.github/workflows/teampulse-ci.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install PHP dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      - name: Copy .env
+        run: cp .env.example .env
+
       - name: Generate application key
         run: php artisan key:generate
 
