--- a/.github/workflows/teampulse-ci.yml
+++ b/.github/workflows/teampulse-ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: php artisan key:generate
 
       - name: Run migrations
-        run: php artisan migrate --force
+        run: php artisan migrate:fresh --seed --force
 
       - name: Run Laravel tests
         run: php artisan test
