--- a/.github/workflows/teampulse-ci.yml
+++ b/.github/workflows/teampulse-ci.yml
@@ -16,6 +16,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: laravel
+          MYSQL_USER: laravel
+          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
@@ -28,13 +30,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ---------------- BACKEND (Laravel) ----------------
+      # ---------------- SETUP PHP & COMPOSER ----------------
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          extensions: mbstring, bcmath, intl, pdo_mysql
+          extensions: mbstring, bcmath, intl, pdo_mysql, xml, ctype, json, tokenizer
           coverage: none
+          tools: composer:v2
 
       - name: Cache Composer dependencies
         uses: actions/cache@v4
@@ -43,29 +46,82 @@ jobs:
           key: composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: composer-
 
-      - name: Install PHP dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-progress --no-interaction
 
-      - name: Copy .env
+      # ---------------- SETUP NODE.JS & NPM ----------------
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Cache Node modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+          restore-keys: node-modules-
+
+      - name: Install Node dependencies
+        run: npm ci --prefer-offline --no-audit
+
+      # ---------------- BUILD ASSETS ----------------
+      - name: Build frontend assets
+        run: npm run build
+
+      # ---------------- SETUP LARAVEL ENVIRONMENT ----------------
+      - name: Copy environment file
         run: cp .env.example .env
 
       - name: Generate application key
         run: php artisan key:generate
 
-      - name: Run migrations
+      - name: Set up database environment variables
+        run: |
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=laravel" >> .env
+          echo "DB_USERNAME=root" >> .env
+          echo "DB_PASSWORD=root" >> .env
+          echo "APP_ENV=testing" >> .env
+          echo "VITE_DEV_SERVER=false" >> .env
+
+      - name: Show environment configuration
+        run: cat .env
+
+      # ---------------- DATABASE SETUP ----------------
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in {1..30}; do
+            if mysql -h 127.0.0.1 -P 3306 -u root -proot -e "SELECT 1"; then
+              echo "MySQL is ready!"
+              break
+            else
+              echo "Waiting for MySQL... Attempt $i"
+              sleep 2
+            fi
+          done
+
+      - name: Run database migrations and seeds
         run: php artisan migrate:fresh --seed --force
 
+      # ---------------- EXECUTE TESTS ----------------
+      - name: Run PHPStan (static analysis)
+        run: vendor/bin/phpstan analyse --no-progress
+
+      - name: Run Laravel Pint (code formatting check)
+        run: vendor/bin/pint --test
+
       - name: Run Laravel tests
-        run: php artisan test
-
-      # ---------------- FRONTEND (Vue 3) ----------------
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install Node dependencies
-        run: npm ci
+        run: php artisan test --verbose
+        env:
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: laravel
+          DB_USERNAME: root
+          DB_PASSWORD: root
 
       - name: Run Vue tests
         run: npm run test
