--- a/.github/workflows/teampulse-ci.yml
+++ b/.github/workflows/teampulse-ci.yml
@@ -65,8 +65,8 @@ jobs:
           restore-keys: node-modules-
 
       - name: Install Node dependencies
-        run: npm ci --prefer-offline --no-audit
-
+        run: npm install --no-audit
+        
       # ---------------- BUILD ASSETS ----------------
       - name: Build frontend assets
         run: npm run build
