--- a/.github/workflows/teampulse-ci.yml
+++ b/.github/workflows/teampulse-ci.yml
@@ -109,7 +109,7 @@ jobs:
 
       # ---------------- EXECUTE TESTS ----------------
       - name: Run Laravel tests
-        run: php artisan test --verbose
+        run: php artisan test
         env:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
