--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@inertiajs/vue3": "^2.0.0",
         "axios": "^1.7.9",
         "pinia": "^3.0.1",
+        "sweetalert2": "^11.26.17",
         "tailwindcss": "^4.1.18",
         "vue": "^3.5.13"
     },
