--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/vue3": "^2.0.0",
+        "@primevue/themes": "^4.5.4",
         "axios": "^1.7.9",
         "pinia": "^3.0.1",
+        "primevue": "^4.5.4",
         "sweetalert2": "^11.26.17",
         "tailwindcss": "^4.1.18",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "ziggy-js": "^2.6.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
