--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/vue3": "^2.0.0",
         "@primevue/themes": "^4.5.4",
+        "@vueup/vue-quill": "^1.2.0",
         "axios": "^1.7.9",
         "pinia": "^3.0.1",
         "primevue": "^4.5.4",
