Changed quill to tiptap text editor & CRUD implementation on comments

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/vue3": "^2.0.0",
         "@primevue/themes": "^4.5.4",
-        "@vueup/vue-quill": "^1.2.0",
+        "@tiptap/extension-image": "^3.15.1",
+        "@tiptap/starter-kit": "^3.15.1",
+        "@tiptap/vue-3": "^3.15.1",
         "axios": "^1.7.9",
         "pinia": "^3.0.1",
         "primevue": "^4.5.4",
