--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "@tiptap/extension-image": "^3.15.1",
         "@tiptap/starter-kit": "^3.15.1",
         "@tiptap/vue-3": "^3.15.1",
+        "apexcharts": "^5.3.6",
         "axios": "^1.7.9",
         "pinia": "^3.0.1",
         "primevue": "^4.5.4",
         "sweetalert2": "^11.26.17",
         "tailwindcss": "^4.1.18",
         "vue": "^3.5.13",
+        "vue3-apexcharts": "^1.10.0",
         "ziggy-js": "^2.6.0"
     },
     "devDependencies": {
